--- a/files/sct@skulptist.de/po/fr.po
+++ b/files/sct@skulptist.de/po/fr.po
@@ -8,32 +8,33 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-02-08 11:35+0100\n"
-"PO-Revision-Date: 2024-02-08 11:36+0100\n"
+"PO-Revision-Date: 2024-02-08 11:37+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: de\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Poedit 3.0.1\n"
 
 #: applet.js:73
 msgid "sct is now at"
-msgstr "sct ist jetzt bei"
+msgstr "sct est maintenant à"
 
 #: connectSct.js:14
 msgid "sct not found"
-msgstr "sct wurde nicht gefunden"
+msgstr "sct introuvable"
 
 #: connectSct.js:15
 msgid "Please install sct to set the color temperature with this applet."
 msgstr ""
-"Bitte installiere sct um mit diesem Applet die Farbtemperatur zu ändern."
+"Veuillez installer sct pour définir la température de couleur avec cette "
+"applet."
 
 #. metadata.json->name
 msgid "SCT Toggle"
-msgstr "SCT Toggle"
+msgstr "Bascule SCT"
 
 #. metadata.json->description
 msgid ""
@@ -41,17 +42,17 @@ msgid ""
 "Set up to 7 custom color temperatures and toggle through by clicking on the "
 "applet"
 msgstr ""
-"Ändere die Farbtemperatur des Bildschirms mit sct.\n"
-"Konfiguriere bis zu 7 Farbtemperaturen und wechsle zwischen Ihnen mit einem "
-"Klick auf das Applet"
+"Basculez les températures de l'écran avec sct.\n"
+"Configurez jusqu'à 7 températures de couleur personnalisées et passez d'une "
+"température à l'autre en cliquant sur l'applet."
 
 #. settings-schema.json->head->description
 msgid "Color Temperatur Steps"
-msgstr "Farbtemperaturschritte"
+msgstr "Étapes de température de couleur"
 
 #. settings-schema.json->colorStep1->description
 msgid "Color temperatur at step 1"
-msgstr "Farbtemperatur an Schritt 1"
+msgstr "Température de couleur à l'étape 1"
 
 #. settings-schema.json->colorStep1->tooltip
 #. settings-schema.json->colorStep2->tooltip
@@ -59,16 +60,16 @@ msgid ""
 "Add a value between 1000 and 10000, where 1000 is red, 6500 is daylight and "
 "10000 is blue."
 msgstr ""
-"Füge ein Wert zwischen 1000 und 10000 ein, wobei 1000 rot, 6500 Tageslicht "
-"und 10000 blau ist."
+"Ajoutez une valeur comprise entre 1 000 et 10 000, où 1 000 correspond au "
+"rouge, 6 500 à la lumière du jour et 10 000 au bleu."
 
 #. settings-schema.json->colorStep2->description
 msgid "Color temperatur at step 2"
-msgstr "Farbtemperatur an Schritt 2"
+msgstr "Température de couleur à l'étape 2"
 
 #. settings-schema.json->colorStep3->description
 msgid "Color temperatur at step 3"
-msgstr "Farbtemperatur an Schritt 3"
+msgstr "Température de couleur à l'étape 3"
 
 #. settings-schema.json->colorStep3->tooltip
 #. settings-schema.json->colorStep4->tooltip
@@ -77,37 +78,38 @@ msgstr "Farbtemperatur an Schritt 3"
 #. settings-schema.json->colorStep7->tooltip
 msgid "Optional. Add another value between 1000 and 10000, or leave empty."
 msgstr ""
-"Optional. Setze einen Wert zwischen 1000 und 10000 ein, oder lasse es leer."
+"Facultatif. Ajoutez une autre valeur entre 1000 et 10000, ou laissez vide."
 
 #. settings-schema.json->colorStep4->description
 msgid "Color temperatur at step 4"
-msgstr "Farbtemperatur an Schritt 4"
+msgstr "Température de couleur à l'étape 4"
 
 #. settings-schema.json->colorStep5->description
 msgid "Color temperatur at step 5"
-msgstr "Farbtemperatur an Schritt 5"
+msgstr "Température de couleur à l'étape 5"
 
 #. settings-schema.json->colorStep6->description
 msgid "Color temperatur at step 6"
-msgstr "Farbtemperatur an Schritt 6"
+msgstr "Température de couleur à l'étape 6"
 
 #. settings-schema.json->colorStep7->description
 msgid "Color temperatur at step 7"
-msgstr "Farbtemperatur an Schritt 7"
+msgstr "Température de couleur à l'étape 7"
 
 #. settings-schema.json->head2->description
 msgid "Applet Icon"
-msgstr "Applet Icon"
+msgstr "Icône d'applet"
 
 #. settings-schema.json->iconName->description
 msgid "The icon to use in the panel"
-msgstr "Das Icon in dem Panel"
+msgstr "L'icône à utiliser dans le panneau"
 
 #. settings-schema.json->iconName->tooltip
 msgid "Select an icon file, or you can type an icon name into the entry box."
 msgstr ""
-"Wähle eine Datei, oder du kannst einen Icon Namen in das Eingabefeld tippen."
+"Sélectionnez un fichier d'icône ou vous pouvez saisir un nom d'icône dans la "
+"zone de saisie."
 
 #. settings-schema.json->resetIconName->description
 msgid "Reset icon name"
-msgstr "Das Icon auf den Standard zurücksetzen."
+msgstr "Réinitialiser le nom de l'icône"
