--- a/files/sct@skulptist.de/po/it.po
+++ b/files/sct@skulptist.de/po/it.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-02-08 11:35+0100\n"
-"PO-Revision-Date: 2024-02-08 11:36+0100\n"
+"PO-Revision-Date: 2024-02-08 11:42+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: de\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,20 +20,20 @@ msgstr ""
 
 #: applet.js:73
 msgid "sct is now at"
-msgstr "sct ist jetzt bei"
+msgstr "sct è ora a"
 
 #: connectSct.js:14
 msgid "sct not found"
-msgstr "sct wurde nicht gefunden"
+msgstr "sct non trovato"
 
 #: connectSct.js:15
 msgid "Please install sct to set the color temperature with this applet."
 msgstr ""
-"Bitte installiere sct um mit diesem Applet die Farbtemperatur zu ändern."
+"Installa sct per impostare la temperatura del colore con questa applet."
 
 #. metadata.json->name
 msgid "SCT Toggle"
-msgstr "SCT Toggle"
+msgstr "Interruttore SCT"
 
 #. metadata.json->description
 msgid ""
@@ -41,17 +41,17 @@ msgid ""
 "Set up to 7 custom color temperatures and toggle through by clicking on the "
 "applet"
 msgstr ""
-"Ändere die Farbtemperatur des Bildschirms mit sct.\n"
-"Konfiguriere bis zu 7 Farbtemperaturen und wechsle zwischen Ihnen mit einem "
-"Klick auf das Applet"
+"Attiva/disattiva le temperature dello schermo con sct.\n"
+"Imposta fino a 7 temperature di colore personalizzate e selezionale facendo "
+"clic sull'applet"
 
 #. settings-schema.json->head->description
 msgid "Color Temperatur Steps"
-msgstr "Farbtemperaturschritte"
+msgstr "Passaggi della temperatura del colore"
 
 #. settings-schema.json->colorStep1->description
 msgid "Color temperatur at step 1"
-msgstr "Farbtemperatur an Schritt 1"
+msgstr "Temperatura del colore al passaggio 1"
 
 #. settings-schema.json->colorStep1->tooltip
 #. settings-schema.json->colorStep2->tooltip
@@ -59,16 +59,16 @@ msgid ""
 "Add a value between 1000 and 10000, where 1000 is red, 6500 is daylight and "
 "10000 is blue."
 msgstr ""
-"Füge ein Wert zwischen 1000 und 10000 ein, wobei 1000 rot, 6500 Tageslicht "
-"und 10000 blau ist."
+"Aggiungi un valore compreso tra 1000 e 10000, dove 1000 è rosso, 6500 è "
+"luce diurna e 10000 è blu."
 
 #. settings-schema.json->colorStep2->description
 msgid "Color temperatur at step 2"
-msgstr "Farbtemperatur an Schritt 2"
+msgstr "Temperatura del colore al passaggio 2"
 
 #. settings-schema.json->colorStep3->description
 msgid "Color temperatur at step 3"
-msgstr "Farbtemperatur an Schritt 3"
+msgstr "Temperatura del colore al passaggio 3"
 
 #. settings-schema.json->colorStep3->tooltip
 #. settings-schema.json->colorStep4->tooltip
@@ -77,37 +77,39 @@ msgstr "Farbtemperatur an Schritt 3"
 #. settings-schema.json->colorStep7->tooltip
 msgid "Optional. Add another value between 1000 and 10000, or leave empty."
 msgstr ""
-"Optional. Setze einen Wert zwischen 1000 und 10000 ein, oder lasse es leer."
+"Opzionale. Aggiungi un altro valore compreso tra 1000 e 10000 oppure lascia "
+"vuoto."
 
 #. settings-schema.json->colorStep4->description
 msgid "Color temperatur at step 4"
-msgstr "Farbtemperatur an Schritt 4"
+msgstr "Temperatura del colore al passaggio 4"
 
 #. settings-schema.json->colorStep5->description
 msgid "Color temperatur at step 5"
-msgstr "Farbtemperatur an Schritt 5"
+msgstr "Temperatura del colore al passaggio 5"
 
 #. settings-schema.json->colorStep6->description
 msgid "Color temperatur at step 6"
-msgstr "Farbtemperatur an Schritt 6"
+msgstr "Temperatura del colore al passaggio 6"
 
 #. settings-schema.json->colorStep7->description
 msgid "Color temperatur at step 7"
-msgstr "Farbtemperatur an Schritt 7"
+msgstr "Temperatura del colore al passaggio 7"
 
 #. settings-schema.json->head2->description
 msgid "Applet Icon"
-msgstr "Applet Icon"
+msgstr "Icona dell'applet"
 
 #. settings-schema.json->iconName->description
 msgid "The icon to use in the panel"
-msgstr "Das Icon in dem Panel"
+msgstr "L'icona da utilizzare nel pannello"
 
 #. settings-schema.json->iconName->tooltip
 msgid "Select an icon file, or you can type an icon name into the entry box."
 msgstr ""
-"Wähle eine Datei, oder du kannst einen Icon Namen in das Eingabefeld tippen."
+"Seleziona un file di icona oppure digita il nome di un'icona nella casella "
+"di immissione."
 
 #. settings-schema.json->resetIconName->description
 msgid "Reset icon name"
-msgstr "Das Icon auf den Standard zurücksetzen."
+msgstr "Reimposta il nome dell'icona"
