--- a/files/sct@skulptist.de/po/sct@skulptist.de.pot
+++ b/files/sct@skulptist.de/po/sct@skulptist.de.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-08 08:46+0100\n"
+"POT-Creation-Date: 2024-02-08 11:35+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,15 +17,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: applet.js:105
+#: applet.js:73
 msgid "sct is now at"
 msgstr ""
 
-#: connectSct.js:17
+#: connectSct.js:14
 msgid "sct not found"
 msgstr ""
 
-#: connectSct.js:18
+#: connectSct.js:15
 msgid "Please install sct to set the color temperature with this applet."
 msgstr ""
 
@@ -51,7 +51,7 @@ msgstr ""
 #. settings-schema.json->colorStep2->tooltip
 msgid ""
 "Add a value between 1000 and 10000, where 1000 is red, 6500 is daylight and "
-"10000 is blue"
+"10000 is blue."
 msgstr ""
 
 #. settings-schema.json->colorStep2->description
@@ -67,7 +67,7 @@ msgstr ""
 #. settings-schema.json->colorStep5->tooltip
 #. settings-schema.json->colorStep6->tooltip
 #. settings-schema.json->colorStep7->tooltip
-msgid "Optional. Add another value between 1000 and 10000, or leave empty"
+msgid "Optional. Add another value between 1000 and 10000, or leave empty."
 msgstr ""
 
 #. settings-schema.json->colorStep4->description
@@ -95,9 +95,9 @@ msgid "The icon to use in the panel"
 msgstr ""
 
 #. settings-schema.json->iconName->tooltip
-msgid "Select an icon file, or you can type an icon name into the entry box"
+msgid "Select an icon file, or you can type an icon name into the entry box."
 msgstr ""
 
 #. settings-schema.json->resetIconName->description
-msgid "reset icon name"
+msgid "Reset icon name"
 msgstr ""
